--- a/slate-social-media/src/Components/ComposePost Editor/Posteditor.css
+++ b/slate-social-media/src/Components/ComposePost Editor/Posteditor.css
@@ -44,3 +44,31 @@ img.avatar-img {
   align-items: center;
   width: auto;
 }
+
+.media-preview {
+  width: 37%;
+  margin-left: auto;
+  margin-right: auto;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 7rem;
+  overflow: auto;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+img.preview-image {
+  width: 100%;
+  padding: 1rem;
+  height: auto;
+  object-fit: cover;
+}
+video.video-preview {
+  height: 25rem;
+  width: 100%;
+  padding: 1rem;
+}
+.preview-text {
+  margin-top: 1rem;
+}
