--- a/slate-social-media/src/Components/Comments Module/Commentsmodel.css
+++ b/slate-social-media/src/Components/Comments Module/Commentsmodel.css
@@ -1,60 +1,178 @@
-.comments-conatiner {
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #e9ebee;
+}
+
+.f-card {
+  background-color: white;
+  /*height:400px;*/
+  width: 502px;
+  border: 1px solid #d0d1d5;
+  border-radius: 3px;
+  margin: auto;
+  margin-bottom: 10px;
+  padding: 12px;
+
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); /* Not original, just a test */
+}
+
+.header {
+  margin-bottom: 17px;
+}
+
+.co-logo {
+  /*display:block;*/
+  float: left;
+  margin-right: 8px;
+
+  width: 3.5rem;
+  height: 3.5rem;
+}
+
+.co-name > a {
+  font-family: Helvetica;
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 1.38;
+  color: #365899;
+  text-decoration: none;
+
+  margin-bottom: 2px;
+}
+
+.co-name > a:hover {
+  text-decoration: underline;
+}
+
+.time {
+  font-family: Helvetica;
+  font-size: 12px;
+  color: #90949c;
+}
+
+.time > a {
+  color: #90949c;
+  text-decoration: none;
+}
+
+.time > a:hover {
+  text-decoration: underline;
+}
+
+.options {
+  font-family: Helvetica;
+  font-size: 12px;
+  color: #e5e5e5;
+  float: right;
+}
+
+.options:hover {
+  color: black; /* Fallback */
+  color: rgba(0, 0, 0, 0.3);
+}
+
+.content {
+  font-size: 1rem;
+  padding-bottom: 0.2rem;
+  line-height: 1.38;
+  margin-left: 2rem;
+}
+
+.reference {
+  width: 476px;
+}
+img.reference-thumb {
+  display: block;
+  /* width: 476px; */
   width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.img-input-btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  bottom: 5rem;
-  width: 100%;
-  right: -1rem;
-}
-.img-comment-avatar {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  margin-right: 10px;
-}
-input.input-text-comment {
-  width: 25%;
-  height: 50px;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-  outline: none;
-  padding: 0.5rem;
-}
-img.commnet-avatar-list-profile {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  margin-right: 10px;
-}
-.comment-list {
-  width: 40%;
   height: auto;
+  /* margin: 1rem; */
+  padding: 0.5rem;
+  border-radius: 3px;
+}
+img.reference-thumb:hover {
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
+  zoom: 100%;
+}
+
+.reference-title {
+  font-family: Georgia;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 22px;
+
+  margin-bottom: 5px;
+}
+
+.reference-subtitle {
+  font-family: Helvetica;
+  font-size: 12px;
+  line-height: 16px;
+}
+
+.reference-font {
+  color: #90949c;
+  font-family: Helvetica;
+  font-size: 11px;
+  line-height: 11px;
+  text-transform: uppercase;
+
+  padding-top: 9px;
+}
+
+.social {
+  margin-top: 12px;
+}
+.social-buttons {
+  color: #7f7f7f;
+  font-weight: bold;
   display: flex;
+  justify-content: space-around;
+  align-items: center;
   flex-direction: row;
+  border-top: 1px solid #e5e5e5;
+  padding-top: 4px;
+}
+
+.material-icons.postcardmi {
+  font-size: 1.5rem;
+  color: black;
+  cursor: pointer;
+}
+
+.social-buttons span {
+  font-size: 12px;
+  margin-right: 20px;
+  padding: 4px 4px 4px 0;
+}
+
+.social-buttons span:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.social-buttons span i {
+  padding-right: 4px;
+}
+.comments-container {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+.reference-video {
+  width: 100%;
+  margin-top: 0.5rem;
+}
+.reference-content {
+  padding: 0;
+  display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
-  border: 1px solid black;
-  position: relative;
-  left: 29rem;
-  bottom: 5rem;
-  word-wrap: break-word;
-  padding: 0.6rem;
-  margin: 1rem;
-  border-radius: 0.3rem;
-}
-.comment-text {
-  padding: 1rem;
-}
-.replying-to {
-  color: gray;
+  flex-direction: column;
 }
