--- a/slate-social-media/src/Components/EditPostForm/EditPostForm.css
+++ b/slate-social-media/src/Components/EditPostForm/EditPostForm.css
@@ -13,7 +13,7 @@ body {
 .f-card {
   background-color: white;
   /*height:400px;*/
-  width: 502px;
+  width: 530px;
   border: 1px solid #d0d1d5;
   border-radius: 3px;
   margin: auto;
@@ -32,8 +32,8 @@ body {
   float: left;
   margin-right: 8px;
 
-  width: 40px;
-  height: 40px;
+  width: 3.5rem;
+  height: 3.5rem;
 }
 
 .co-name > a {
@@ -91,26 +91,14 @@ img.reference-thumb {
   display: block;
   /* width: 476px; */
   width: 100%;
-  height: 8rem;
+  height: auto;
   /* margin: 1rem; */
   padding: 0.5rem;
   border-radius: 3px;
 }
 img.reference-thumb:hover {
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
   zoom: 100%;
-}
-
-.reference-content {
-  border: 2px solid black;
-  border: 2px solid rgba(0, 0, 0, 0.1);
-  border-top: 0;
-  padding: 10px 12px 10px 12px;
-}
-
-.reference:hover .reference-content {
-  border-color: black; /* Fallback */
-  border-color: rgba(0, 0, 0, 0.15);
 }
 
 .reference-title {
@@ -153,7 +141,8 @@ img.reference-thumb:hover {
 }
 
 .material-icons.postcardmi {
-  font-size: 2rem;
+  font-size: 1.5rem;
+  color: black;
 }
 
 .social-buttons span {
@@ -184,4 +173,21 @@ img.reference-thumb:hover {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+.modal-container {
+  position: relative;
+  bottom: 2.5rem;
+  left: 4rem;
+  height: 2rem;
+  width: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.icons-button {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: auto;
 }
