--- a/slate-social-media/src/Components/Comments Module/Commentsmodel.css
+++ b/slate-social-media/src/Components/Comments Module/Commentsmodel.css
@@ -176,3 +176,79 @@ img.reference-thumb:hover {
   align-items: center;
   flex-direction: column;
 }
+input[type="text"].commnet-text {
+  width: 100%;
+  padding: 1rem;
+  outline: none;
+}
+.comment-box-data {
+  display: flex;
+  width: 100%;
+  margin: 1rem;
+  justify-content: center;
+  align-items: center;
+  height: 5rem;
+}
+img.avatar_image {
+  height: 4rem;
+  width: 4rem;
+  border-radius: 50%;
+}
+.comment-card {
+  width: 100%;
+  height: 4rem;
+  display: flex;
+}
+.comment-box-data1 {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 1rem;
+}
+p.text-content {
+  margin: 2rem;
+}
+.username-and-avatar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+hr {
+  width: 100%;
+  height: 1px;
+  background-color: #e5e5e5;
+}
+.like-dislike-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0.5rem;
+}
+.material-icons.commentsmi {
+  cursor: pointer;
+  font-size: 1.5rem;
+}
+input[type="submit"].btn-submit {
+  background-color: #365899;
+  color: white;
+  border: none;
+  padding: 0.5rem;
+  border-radius: 3px;
+  cursor: pointer;
+  font-size: 1rem;
+  margin-top: 1rem;
+  width: auto;
+}
+input[type="text"].input-comment-text {
+  width: 28vh;
+  padding: 1rem;
+  margin: 1rem;
+  outline: none;
+}
+.form-container {
+  /* margin-top: rem; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
