--- a/slate-social-media/src/Components/Comments Module/Commentsmodel.css
+++ b/slate-social-media/src/Components/Comments Module/Commentsmodel.css
@@ -86,7 +86,7 @@ body {
 }
 
 .reference {
-  width: 476px;
+  width: 31.5rem;
 }
 img.reference-thumb {
   display: block;
@@ -170,11 +170,12 @@ img.reference-thumb:hover {
   margin-top: 0.5rem;
 }
 .reference-content {
-  padding: 0;
+  padding: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  margin: 1rem;
 }
 input[type="text"].commnet-text {
   width: 100%;
@@ -251,4 +252,9 @@ input[type="text"].input-comment-text {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.reference-pdf {
+  width: 100%;
+  margin: 1rem;
+  height: 18rem;
 }
