--- a/slate-social-media/src/Components/Cards/Profilepagepostcard.css
+++ b/slate-social-media/src/Components/Cards/Profilepagepostcard.css
@@ -1,15 +1,3 @@
-*,
-*:before,
-*:after {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-body {
-  background-color: #e9ebee;
-}
-
 .f-card {
   background-color: white;
   /*height:400px;*/
@@ -20,7 +8,7 @@ body {
   margin-bottom: 10px;
   padding: 12px;
 
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); /* Not original, just a test */
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
 .header {
