--- a/slate-social-media/src/Components/Footer/Footer.css
+++ b/slate-social-media/src/Components/Footer/Footer.css
@@ -4,13 +4,14 @@
   justify-content: space-between;
   flex-direction: row;
   height: 4rem;
-  background-color: rgb(108, 170, 251);
+  background-color: rgb(255, 255, 255);
   max-width: 100%;
   padding: 1rem;
   bottom: 0;
   position: fixed;
   width: 100%;
   font-size: 1.2rem;
+  box-shadow: 0px -1px 0px 0px rgba(0, 0, 0, 0.1);
 }
 
 .social-media-links {
