--- a/slate-social-media/src/Components/Header/Header.css
+++ b/slate-social-media/src/Components/Header/Header.css
@@ -1,18 +1,20 @@
-nav.navigation-menu {
+.navigation-menu {
   position: fixed;
   width: 100%;
   top: 0;
-  left: 0;
-  margin-bottom: 8rem;
-  z-index: 1;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 span.material-icons.navigationmi {
   font-size: 2rem;
 }
-input[type="search"].navigation__input {
-  border: none;
-  outline: none;
-  padding: 0.3rem;
+.user-avatar img {
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
+  padding: 0.8rem;
+}
+.navigation__right {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
