--- a/slate-social-media/src/Components/Sidebar/Sidebar.css
+++ b/slate-social-media/src/Components/Sidebar/Sidebar.css
@@ -1,24 +1,21 @@
-.aside {
-  height: 80%;
-  width: 6rem;
-  background-color: rgb(106, 161, 255);
-  text-align: center;
+aside.aside {
   display: flex;
-  justify-content: flex-start;
-  align-items: center;
   flex-direction: column;
-  font-size: 1.2rem;
+  width: 16rem;
+  height: 100%;
   position: fixed;
-  top: 5rem;
-  left: 1rem;
-  border-radius: 0.5rem;
+  left: 0;
+  top: 4rem;
+  background-color: #ffffff;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
 }
 span.material-icons.sidebarmi {
-  font-size: 1.8rem;
+  font-size: 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
+  color: black;
+  margin: 1rem;
 }
 
 /* fetaures catagories  */
@@ -29,8 +26,19 @@ span.material-icons.sidebarmi {
 .explore,
 .home {
   text-align: center;
-  padding: 1.2rem;
-  font-size: 1.2rem;
   cursor: pointer;
-  transition: width 2s;
+  font-weight: 800;
+  color: black;
+  display: flex;
+  width: auto;
+  justify-content: center;
+  align-items: center;
+}
+.active {
+  background-color: #dbdbdb;
+  box-shadow: #858484 0px 1px 3px 0px;
+  margin: 1.5rem;
+  margin-bottom: 0;
+  margin-top: 1rem;
+  height: 3.5rem;
 }
