--- a/slate-social-media/src/Pages/Explorepage/Explorepage.css
+++ b/slate-social-media/src/Pages/Explorepage/Explorepage.css
@@ -1,1 +1,12 @@
-
+.explore-page-post-card {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  padding: 1rem;
+  height: auto;
+  overflow: auto;
+}
