--- a/slate-social-media/src/Components/ComposePost Editor/Posteditor.css
+++ b/slate-social-media/src/Components/ComposePost Editor/Posteditor.css
@@ -35,8 +35,8 @@ input[type="file"] {
 img.avatar-img {
   height: 5rem;
   width: 5rem;
-  margin: 0.5rem;
   border-radius: 0.5rem;
+  margin-top: -2rem;
 }
 .icons-button {
   display: flex;
