--- a/slate-social-media/src/Components/PostCard-Exp/Postcard.css
+++ b/slate-social-media/src/Components/PostCard-Exp/Postcard.css
@@ -34,8 +34,7 @@
   width: 25%;
   max-width: auto;
   height: auto;
-  box-shadow: rgba(255, 255, 255, 0.2) 0px 0px 0px 1px inset,
-    rgba(0, 0, 0, 0.9) 0px 0px 0px 1px;
+  border: 1px gray solid;
 }
 
 .post__header {
@@ -94,4 +93,5 @@ hr.laxman-rekha {
 .reference-video-content,
 .reference-pdf-content {
   margin: 1rem;
+  width: 100%;
 }
