--- a/slate-social-media/src/Components/ViewEachUserProfile/Viewuserprofile.css
+++ b/slate-social-media/src/Components/ViewEachUserProfile/Viewuserprofile.css
@@ -27,26 +27,31 @@ img.avatar-profile-img {
 }
 img.bg-poster-img {
   height: 100%;
+  object-fit: contain;
   width: 100%;
   border-radius: 0.5rem;
 }
 .btn-text-profile1 {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   width: 100%;
   position: relative;
   bottom: 7rem;
   left: 1rem;
+  font-size: 1.2rem;
+  color: black;
 }
 .profile-counter1 {
   display: flex;
   justify-content: space-around;
   width: 60%;
   position: relative;
-  background-color: white;
+  background-color: gray;
   bottom: 6rem;
-  height: 4rem;
   left: 6rem;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  font-size: 1.5rem;
   box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
 }
