--- a/slate-social-media/src/Components/emoji/Emoji.css
+++ b/slate-social-media/src/Components/emoji/Emoji.css
@@ -1,9 +1,11 @@
 .picker-container {
+  width: 70%;
   position: absolute;
-  width: 60%;
+  top: 62%;
+  left: 42%;
 }
 
-.input-style1 {
+span.material-icons.input-style1 {
   cursor: pointer;
-  font-size: 1.1rem;
+  font-size: 2.2rem;
 }
