--- a/slate-social-media/src/Components/AuthForms/Signup.css
+++ b/slate-social-media/src/Components/AuthForms/Signup.css
@@ -32,3 +32,22 @@
 input:valid {
   border: 1px solid green;
 }
+input[type="file"].input__field {
+  visibility: hidden;
+  cursor: pointer;
+  display: inline;
+  width: 1rem;
+  height: 1rem;
+}
+img.user-icon-round {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+.image-handle {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 80%;
+}
