--- a/slate-social-media/src/App.css
+++ b/slate-social-media/src/App.css
@@ -1,10 +1,10 @@
-@import "https://slateui.netlify.app/css/components.css";
+/* @import "https://slateui.netlify.app/css/components.css"; */
 
 * {
   scroll-behavior: smooth;
   padding: 0;
   margin: 0;
 }
-a {
-  text-decoration: none;
+body {
+  background-color: gray;
 }
